{
    "name": "InputController",
    "maps": [
        {
            "name": "World",
            "id": "59fa9410-023c-4a83-97f3-d3360961d25c",
            "actions": [
                {
                    "name": "KB_MoveUp",
                    "type": "Value",
                    "id": "d819d41b-65df-45b7-9853-a28654570552",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "KB_MoveDown",
                    "type": "Value",
                    "id": "52bd6912-8fad-46dd-bdbd-2c66cdf2691f",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "KB_MoveLeft",
                    "type": "Value",
                    "id": "4e876747-7c95-4ac2-9b74-54888149c3cd",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "KB_MoveRight",
                    "type": "Value",
                    "id": "534f8e0a-3051-4100-8b07-119feeecb85c",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Mouse_Pos",
                    "type": "Value",
                    "id": "7e157f69-198a-4f41-a69f-8d9b236cda45",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7d024c32-91e9-467b-8a89-67f94976773c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KB_MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1976d293-3652-4140-9552-255c44a910b9",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KB_MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2bcb05db-c825-40f6-962a-45548d0fa8f9",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KB_MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bbfae0ee-ea00-4415-906d-aa3db0b82662",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KB_MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "54ce1ed2-3b24-4f89-a7e1-1b43f84dc456",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KB_MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bdd385fa-e142-4653-a646-8196def2571c",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KB_MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "def6600f-dd23-4869-b48f-6eaf5fb1a934",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KB_MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6b70c4dc-1ee3-434b-8191-152996e5a94b",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KB_MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e3a6029a-180e-4d6a-a357-0d1988207724",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse_Pos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "New action map1",
            "id": "4559257b-e446-4e03-bf83-fc8beeffe9ff",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "1449d2a7-b678-4c69-ae3f-1b1f0b9e30d8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "afd5586a-959a-4afe-bb52-93e8dfc70944",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}